--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-localize": "^1.3.3",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.3.0",
+    "react-native-simple-toast": "^1.0.0",
     "react-navigation": "^4.2.2",
     "react-navigation-stack": "^2.2.3"
   },
